# Image-Segmentation-Parallel-KMeans-Clustering

./: .clangd  .gitignore  CMakeLists.txt  README.md  kmeans.h  main.cpp  main.py
.cache/clangd/index/: image_utils.cpp.7C1D3949290E0298.idx  image_utils.hpp.9AEE8191F4C5E764.idx  main_serial.cpp.52022ECE8514563A.idx  main_serial.cpp.A55BCF979650736A.idx
components/: Cluster.h  Point.h
db/: input.csv
db/report/: cat2_k=5.csv  dog35_k=7.csv  dog48_k=5.csv  multiproc_performance.csv  performance1.csv  performance_by_pixelsize_hybrid.csv  visualization.py  visualization2.py  visualization3.py
include/common/: constants.hpp  image_utils.hpp  kmeans_utils.hpp
include/gpu/: img_seg_gpu.hpp  kmeans_kernels.cuh
include/mpi/: img_seg_mpi.hpp  kmeans.hpp
include/mpi_gpu/: kmeans_mpi_gpu.cuh
include/serial/: img_seg_serial.hpp  kmeans.hpp
src/common/: image_utils.cpp  kmeans_utils.cpp
src/gpu/: img_seg_gpu.cu  kmeans_kernels.cu  main_gpu.cpp
src/mpi/: img_seg_mpi.cpp  kmeans.cpp  main_mpi.cpp
src/mpi_gpu/: kmeans_mpi_gpu.cu  main_mpi_gpu.cpp
src/serial/: README.md  img_seg_serial.cpp  kmeans.cpp  main_serial.cpp
tests/test1/: output1_expected.txt
tests/test2/: output2_expected.txt
tests/test4/: output4_expected.txt
